# espuma

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
examples/: breaking_dam.ipynb  cavity.ipynb  running_case.ipynb  scalar_breakthrough.ipynb  visualization.ipynb
src/espuma/: __init__.py  base.py  boundary_probe.py  case.py
src/espuma/scripts/: pointFiles.sh
templates/breakthrough/0/: T  U
templates/breakthrough/system/: blockMeshDict  boundaryProbes  controlDict
tests/: base_case.ipynb  clean_tests.sh  test_base.py  test_boundary_probe.py
